# natisand

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
benches/: .gitignore  Makefile  README.md  WORKSPACE.bazel
benches/gpg/: gpg.js
benches/image-conversion/: gm.js  im.js
benches/libpng/: libpng.wasm  main_bench.js  main_server.js  main_server_wasm.ts  main_wasm_bench.ts
benches/libpng/wrk/: configure_requests.lua
benches/mysql/: main.js
benches/openssl/: openssl.js
benches/openssl_ffi/: libssl.so.3  mod.ts  sys.ts
benches/opus/: libopusenc.so.0  main.js  main_server.js  main_server_sandbox.js  main_wasm.ts
benches/opus/wrk/: configure_requests.lua
benches/policies/: deno_ffi.json  gm.json  gpg.json  gpg_template.json  im.json  libopusenc.json  libopusenc_unpriv.json  libpng.json  libpng_server.json  libxml2.json  mysql.json  openssl.json  sqlite3.json  sqlite3_whole_lib.json  syscalls.json  tesseract_template.json
benches/policies/subprocess/: generate_minijail_seccomp_binaries.py  generate_minijail_seccomp_binary.sh  generate_native_sandbox_policy.py  generate_native_sandbox_policy.sh  to_native_sandbox_policy.py
benches/sqlite/: .gitignore  main.js  main_sandbox.js  main_server.js  main_server_sandbox.js  main_server_wasm.js  main_wasm.js
benches/subprocess/: bench.js  export_tests.py  oak_server.js  server.js  server_bench.js  server_tests.json  std_server.js  tests.json
benches/subprocess/sandbox2/: BUILD.bazel  sandboxer.cc  sandboxer_test.sh
benches/subprocess/wrk/: configure_requests.lua  crop-images.sh  export_server_bench.js  visualize_benchmarks.py  visualize_benchmarks_by_utility.py
benches/syscalls/: main.js  syscalls.c
benches/syscalls/wasm/open/: main.ts  open.js  open.wasm  open_file.txt
benches/tesseract/: tesseract.js
cli/: build.rs
cli/args/: flags.rs
cli/compat/: mod.rs
cli/ops/: bench.rs
cli/tools/: bench.rs  standalone.rs
core/: Cargo.toml  inspector.rs  runtime.rs
examples/: Makefile  ls.js
examples/mknod/: mknod.c  mknod.json  mknod.ts
examples/open/: open.c  open.json  open.ts
examples/sleep/: sleep.js  sleep.json
ext/ffi/: Cargo.toml  lib.rs
ext/sandbox/: Cargo.toml  build.rs
ext/sandbox/src/: fs.rs  lib.rs  policy.rs  utils.rs
ext/sandbox/src/ipc/: filters.json  ipc.rs
ext/sandbox/src/ipc/bpf/: ipc.bpf.c
ext/sandbox/src/net/: net.rs
ext/sandbox/src/net/bpf/: net.bpf.c  network.h  structs.h
mitigation/: .gitignore  README.md
mitigation/GNU_tar/: Makefile  README.md  run.py  tar_evil.json  tar_evil_t.json  tar_legit.json  tar_legit_t.json  test1.js  test2.js  test3.js
runtime/: Cargo.toml  build.rs  permissions.rs
runtime/ops/: process.rs
serde_v8/: Cargo.toml
(+34 files in other folders)
