[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bincode = "1.3.3"
libbpf-cargo = "0.12.0"
seccompiler = { version = "0.2.0", features = ["json"]}
serde = { version = "1.0.144", features = ["derive"] }

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
caps = "0.5.4"
criterion = "0.4.0"
landlock = { path = "../landlock" }
lazy_static = "1.4.0"
libbpf-rs = "0.18.0"
libc = "0.2.126"
log = "0.4.17"
nix = "0.20.0"
regex = "1.6.0"
seccompiler = "0.2.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
structopt = "0.3"
strum = { version = "0.24", features = ["derive"] }

[lib]
name = "sandbox"
